k8s-app-manifests/tours-travels-webapp-deployment.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tours-travels-webapp
  namespace: app-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tours-travels-webapp
  template:
    metadata:
      labels:
        app: tours-travels-webapp
    spec:
      containers:
        - name: tours-travels-webapp
          image: 339712902352.dkr.ecr.ap-south-1.amazonaws.com/app/tour-travels-webapp:1.0.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
