k8s-app-manifests/tours-travels-webapp-app-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app-ns
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: app.devopswithdeepak.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tours-travels-service
                port: 
                  number: 80
